[tool.poetry]
name = "tag-youre-it"
version = "2.1.2"
description = "Play tag with other Redditors"
readme = "README.md"
authors = ["nickatnight <nickkelly.858@gmail.com>"]
homepage = "https://github.com/nickatnight/tag-youre-it"
repository = "https://github.com/nickatnight/tag-youre-it"

[tool.poetry.dependencies]
python = "^3.9"
asyncpraw = "^7.5.0"
pydantic = "^1.10.2"
emoji = "^2.1.0"
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]
black = "22.6.0"
flake8 = "5.0.4"
isort = "5.10.1"
pytest = "6.2.3"
pytest-cov = "2.12.0"
mock = "^4.0.3"
asyncpg = "^0.26.0"
alembic = "^1.8.1"

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
line_length = 88
include_trailing_comma = true
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build)'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
