[tool.poetry]
name = "tag-youre-it"
version = "2.1.8"
description = "Play tag with other Redditors"
readme = "README.md"
authors = ["nickatnight <nickkelly.858@gmail.com>"]
homepage = "https://github.com/nickatnight/tag-youre-it"
repository = "https://github.com/nickatnight/tag-youre-it"

[tool.poetry.dependencies]
python = "^3.9"
asyncpraw = "^7.5.0"
pydantic = "^1.10.2"
emoji = "^2.1.0"
sqlmodel = "^0.0.8"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"
flake8 = "5.0.4"
isort = "5.10.1"
pytest = "6.2.3"
pytest-cov = "2.12.0"
mock = "^4.0.3"
asyncpg = "^0.26.0"
pytest-asyncio = "^0.19.0"
pytest-mock = "^3.10.0"
mypy = "^0.982"
types-emoji = "^2.1.0"
codespell = "^2.2.2"
tomli = "^2.0.1"

[tool.poetry.scripts]
apply-migrations = "tag_youre_it.scripts.apply_migrations:main"

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
line_length = 88
include_trailing_comma = true
sections = 'FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|migrations)'

[tool.codespell]
ignore-words-list = 'selectin,'

[tool.coverage.report]
fail_under = 55

[tool.coverage.run]
omit = ['*play.py', '*tests/*']

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true 
disallow_untyped_calls = true 
disallow_untyped_defs = true
disallow_incomplete_defs = true 
check_untyped_defs = true 
disallow_untyped_decorators = true 
no_implicit_optional = true
warn_redundant_casts = true 
warn_unused_ignores = true
warn_return_any = true 
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "asyncpraw.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
